# chat-docs

./: .env.example  .gitignore  Makefile  README.md  chainlit.md  docker-compose.yaml  pyproject.toml
.chainlit/: config.toml
docker/dev/: Dockerfile
docker/ollama/: Dockerfile  start.sh
src/chat_docs/: config.py  main.py
src/chat_docs/conversation/: chain.py
src/chat_docs/document_processor/: pdf_processor.py
src/chat_docs/session_store/: memory_store.py
